# grandcentrix-rust-on-azure-sphere

./: README.md
baremetal/: .gdbinit  Cargo.toml  README.md  app_manifest.json  build.rs  linker.ld  package.sh  setenv.sh  sysroots
baremetal/.cargo/: config
baremetal/src/: main.rs
baremetal/src/gpio/: mod.rs
baremetal/src/intercore/: mod.rs
baremetal/src/timer/: mod.rs
baremetal/src/uart/: mod.rs
highlevel/: README.md
highlevel/app/: .gdbinit  Cargo.toml  app_manifest.json  arm-v7-none-eabi.json  debug.sh  package.sh  runtests.sh  setenv.sh
highlevel/app/.cargo/: config
highlevel/app/src/: main.rs
highlevel/sphere-lib/: Cargo.toml
highlevel/sphere-lib/src/: lib.rs
highlevel/sphere-lib/src/application/: mod.rs
highlevel/sphere-lib/src/azureiot/: mod.rs
highlevel/sphere-lib/src/curl/: mod.rs
highlevel/sphere-lib/src/logging/: mod.rs
highlevel/sphere-lib/src/mt3620_gpio/: mod.rs
highlevel/sphere-lib/src/networking/: mod.rs
highlevel/sphere-lib/src/storage/: mod.rs
highlevel/sphere-lib/src/uart/: mod.rs
highlevel/sphere-lib/src/util/: mod.rs
highlevel/sphere-lib/src/watchdog/: mod.rs
highlevel/sphere-rt/: Cargo.toml
highlevel/sphere-rt/src/: lib.rs
highlevel/sphere-rt/src/allocator/: mod.rs
highlevel/sphere-rt/src/prelude/: v1.rs
highlevel/sphere-sys/: Cargo.toml  build.rs
highlevel/sphere-sys/src/: lib.rs
