[package]
name = "sphere-app"
version = "0.1.0"
authors = ["Bjoern Quentin <bjoern.quentin@grandcentrix.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[dependencies]
sphere-sys = { path = "../sphere-sys"}
sphere-lib = {path = "../sphere-lib"}
sphere-rt = {path = "../sphere-rt"}

